--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -11,5 +11,14 @@
     "url": "https://github.com/cerensavasan/MoneyTree"
   },
   "author": "Team 4 - GMI Summer 2016",
-  "license": "Sapient Ltd"
+  "license": "Sapient Ltd",
+  "devDependencies": {
+    "express": "^4.14.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.0",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.1.0"
+  }
 }
