--- a/JAVA/bin/.gitignore
+++ b/JAVA/bin/.gitignore
@@ -1,20 +1,1 @@
-/User.class
-/Trader.class
-/PM.class
-/UserObjects/
-/MainJFrame$1.class
-/MainJFrame$2.class
-/MainJFrame$3.class
-/MainJFrame.class
-/MainJFrame.form
-/TradeWindow$1.class
-/TradeWindow$2.class
-/TradeWindow$3.class
-/TradeWindow$4.class
-/TradeWindow$5.class
-/TradeWindow.class
-/TradeWindow.form
-/UserLogin$1.class
-/UserLogin$2.class
-/UserLogin.class
-/UserLogin.form
+/com/
