--- a/JAVA/bin/.classpath
+++ b/JAVA/bin/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry excluding="src/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="Resources/rs2xml.jar"/>
+	<classpathentry kind="lib" path="Resources/unirest-java-1.4.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
