--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JavaProject1
+application.vendor=csavas
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,18 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/JavaProject1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.JAVA-src=JAVA/src
+file.reference.JTattoo-1.6.11.jar=JAVA/Resources/JTattoo-1.6.11.jar
+file.reference.rs2xml.jar=JAVA/Resources/rs2xml.jar
+file.reference.unirest-java-1.4.9.jar=JAVA/Resources/unirest-java-1.4.9.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.unirest-java-1.4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=MainJFrame
+main.class=com.view.AdminWindow
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
