--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -13,7 +13,8 @@
   "author": "Team 4 - GMI Summer 2016",
   "license": "Sapient Ltd",
   "devDependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mysql": "^2.11.1"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -22,4 +23,3 @@
     "gulp-nodemon": "^2.1.0"
   }
 }
-
