Code to populate data in the PM TraderHistory table

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/JavaProject1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.3.1.jar=JAVA/Resources/gson-2.3.1.jar
 file.reference.JAVA-src=JAVA/src
 file.reference.JTattoo-1.6.11.jar=JAVA/Resources/JTattoo-1.6.11.jar
 file.reference.rs2xml.jar=JAVA/Resources/rs2xml.jar
@@ -38,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.JTattoo-1.6.11.jar}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.unirest-java-1.4.9.jar}
+    ${file.reference.unirest-java-1.4.9.jar}:\
+    ${file.reference.gson-2.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
