Trying httprequest, added a bunch of jars and trader

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gson-2.3.1.jar=JAVA/Resources/gson-2.3.1.jar
+file.reference.httpasyncclient-4.0-beta4.jar=JAVA/Resources/httpasyncclient-4.0-beta4.jar
+file.reference.httpclient-4.5.jar=JAVA/Resources/httpclient-4.5.jar
+file.reference.httpcore-4.4.1.jar=JAVA/Resources/httpcore-4.4.1.jar
+file.reference.httpcore-nio-4.3-beta2.jar=JAVA/Resources/httpcore-nio-4.3-beta2.jar
+file.reference.java-json.jar=JAVA/Resources/java-json.jar
 file.reference.JAVA-src=JAVA/src
 file.reference.JTattoo-1.6.11.jar=JAVA/Resources/JTattoo-1.6.11.jar
+file.reference.org-apache-commons-logging.jar=JAVA/Resources/org-apache-commons-logging.jar
 file.reference.rs2xml.jar=JAVA/Resources/rs2xml.jar
 file.reference.unirest-java-1.4.9.jar=JAVA/Resources/unirest-java-1.4.9.jar
 includes=**
@@ -40,7 +46,13 @@ javac.classpath=\
     ${file.reference.JTattoo-1.6.11.jar}:\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.unirest-java-1.4.9.jar}:\
-    ${file.reference.gson-2.3.1.jar}
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.java-json.jar}:\
+    ${file.reference.httpcore-4.4.1.jar}:\
+    ${file.reference.httpclient-4.5.jar}:\
+    ${file.reference.httpasyncclient-4.0-beta4.jar}:\
+    ${file.reference.org-apache-commons-logging.jar}:\
+    ${file.reference.httpcore-nio-4.3-beta2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
