--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.gson-2.3.1.jar=JAVA/Resources/gson-2.3.1.jar
 file.reference.httpasyncclient-4.0-beta4.jar=JAVA/Resources/httpasyncclient-4.0-beta4.jar
 file.reference.httpclient-4.5.jar=JAVA/Resources/httpclient-4.5.jar
 file.reference.httpcore-4.4.1.jar=JAVA/Resources/httpcore-4.4.1.jar
+file.reference.httpcore-nio-4.2.3.jar=JAVA/Resources/httpcore-nio-4.2.3.jar
 file.reference.httpcore-nio-4.3-beta2.jar=JAVA/Resources/httpcore-nio-4.3-beta2.jar
 file.reference.java-json.jar=JAVA/Resources/java-json.jar
 file.reference.JAVA-src=JAVA/src
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.httpclient-4.5.jar}:\
     ${file.reference.httpasyncclient-4.0-beta4.jar}:\
     ${file.reference.org-apache-commons-logging.jar}:\
-    ${file.reference.httpcore-nio-4.3-beta2.jar}
+    ${file.reference.httpcore-nio-4.3-beta2.jar}:\
+    ${file.reference.httpcore-nio-4.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
