--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.0",
     "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.1.0"
+    "gulp-nodemon": "^2.1.0",
+    "nodemailer": "^2.6.0",
+    "randomstring": "^1.1.5"
   }
 }
