--- a/JAVA/.classpath
+++ b/JAVA/.classpath
@@ -3,9 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry excluding="src/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="Resources/rs2xml.jar"/>
-	<classpathentry kind="lib" path="Resources/unirest-java-1.4.9.jar"/>
-	<classpathentry kind="lib" path="Resources/JTattoo-1.6.11.jar"/>
-	<classpathentry kind="lib" path="Resources/gson-2.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="Resources/rs2xml.jar"/>
+	<classpathentry exported="true" kind="lib" path="Resources/unirest-java-1.4.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="Resources/JTattoo-1.6.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="Resources/gson-2.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
