--- a/JAVA/.classpath
+++ b/JAVA/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="lib" path="Resources/unirest-java-1.4.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="Resources/JTattoo-1.6.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="Resources/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="Resources/java-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
