--- a/JAVA/.classpath
+++ b/JAVA/.classpath
@@ -8,5 +8,11 @@
 	<classpathentry exported="true" kind="lib" path="Resources/JTattoo-1.6.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="Resources/gson-2.3.1.jar"/>
 	<classpathentry kind="lib" path="Resources/java-json.jar"/>
+	<classpathentry kind="lib" path="Resources/httpasyncclient-4.0-beta4.jar"/>
+	<classpathentry kind="lib" path="Resources/httpclient-4.5.jar"/>
+	<classpathentry kind="lib" path="Resources/httpcore-4.4.1.jar"/>
+	<classpathentry kind="lib" path="Resources/httpcore-nio-4.2.3.jar"/>
+	<classpathentry kind="lib" path="Resources/httpcore-nio-4.3-beta2.jar"/>
+	<classpathentry kind="lib" path="Resources/org-apache-commons-logging.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
