--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -14,7 +14,8 @@
   "license": "Sapient Ltd",
   "devDependencies": {
     "express": "^4.14.0",
-    "mysql": "^2.11.1"
+    "mysql": "^2.11.1",
+    "socket.io": "^1.4.8"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
