--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,16 @@ dist.jar=${dist.dir}/JavaProject1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.9.jar=JAVA/Resources/commons-codec-1.9.jar
+file.reference.commons-logging-1.2.jar=JAVA/Resources/commons-logging-1.2.jar
 file.reference.gson-2.3.1.jar=JAVA/Resources/gson-2.3.1.jar
 file.reference.httpasyncclient-4.0-beta4.jar=JAVA/Resources/httpasyncclient-4.0-beta4.jar
-file.reference.httpclient-4.5.jar=JAVA/Resources/httpclient-4.5.jar
-file.reference.httpcore-4.4.1.jar=JAVA/Resources/httpcore-4.4.1.jar
-file.reference.httpcore-nio-4.2.3.jar=JAVA/Resources/httpcore-nio-4.2.3.jar
+file.reference.httpasyncclient-4.0.2.jar=JAVA/Resources/httpasyncclient-4.0.2.jar
+file.reference.httpclient-4.3.6.jar=JAVA/Resources/httpclient-4.3.6.jar
+file.reference.httpcore-4.4.5.jar=JAVA/Resources/httpcore-4.4.5.jar
 file.reference.httpcore-nio-4.3-beta2.jar=JAVA/Resources/httpcore-nio-4.3-beta2.jar
+file.reference.httpcore-nio-4.4.5.jar=JAVA/Resources/httpcore-nio-4.4.5.jar
+file.reference.httpmime-4.3.6.jar=JAVA/Resources/httpmime-4.3.6.jar
 file.reference.java-json.jar=JAVA/Resources/java-json.jar
 file.reference.JAVA-src=JAVA/src
 file.reference.JTattoo-1.6.11.jar=JAVA/Resources/JTattoo-1.6.11.jar
@@ -49,12 +53,16 @@ javac.classpath=\
     ${file.reference.unirest-java-1.4.9.jar}:\
     ${file.reference.gson-2.3.1.jar}:\
     ${file.reference.java-json.jar}:\
-    ${file.reference.httpcore-4.4.1.jar}:\
-    ${file.reference.httpclient-4.5.jar}:\
-    ${file.reference.httpasyncclient-4.0-beta4.jar}:\
     ${file.reference.org-apache-commons-logging.jar}:\
+    ${file.reference.httpasyncclient-4.0-beta4.jar}:\
     ${file.reference.httpcore-nio-4.3-beta2.jar}:\
-    ${file.reference.httpcore-nio-4.2.3.jar}
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.httpcore-4.4.5.jar}:\
+    ${file.reference.httpcore-nio-4.4.5.jar}:\
+    ${file.reference.httpasyncclient-4.0.2.jar}:\
+    ${file.reference.httpmime-4.3.6.jar}:\
+    ${file.reference.httpclient-4.3.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
